fixed product slider css width overflow issue

--- a/assets/css/holzschmiede.css
+++ b/assets/css/holzschmiede.css
@@ -221,7 +221,7 @@ footer .content-header {
 }
 
 #slides .inner {
-	width: 500%;
+	width: 700%;
 	line-height: 0;
 }
 
